--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "homepage": "https://github.com/bohdan-nitro/pari-match#readme",
   "dependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
+    "gulp-path": "^4.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5"
